Agregando suma total al carrito y mejorado visual

--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
                     <button class="redondeada" id="boton-buscar" onclick="buscarProductos()">Buscar</button> <button id="vaciar-carrito">Vaciar carrito</button>
                     </div>
                     </article>
+                    
+                <article>
+                    <div id="carroversifunciona"></div>
+                </article>
+
                 <article>
                     <div class="posiciontienda"><div id="tienda"></div></div>
                 </article>
