Boton de borrado en el carrito

--- a/index.html
+++ b/index.html
@@ -83,3 +83,25 @@
         <script src="./main.js"></script>
     </body>
 </html>
+
+
+<!--const obtenerProductos = async () => {
+    try {
+      const response = await fetch('./productos.json');
+      productos = await response.json();
+      mostrarProductos();
+    } catch (error) {
+      console.log('Error al cargar el archivo JSON:', error);
+    }
+  };
+  
+  /*fetch('./productos.json')
+    .then(response => response.json())
+    .then(data => {
+      productos = data;
+      mostrarProductos();
+    })
+    .catch(error => {
+      console.log('Error al cargar el archivo JSON:', error);
+    });
+  */-->
